// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileProperties components/profile/team/TransferConfirmation delete=true 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          components/profile/team/TransferConfirmation
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          delete=true
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <div>
      <portal-dummy>
        <div
          className=""
        >
          <div
            className="modal fade"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            role="dialog"
            style={
              Object {
                "display": "block",
              }
            }
            tabIndex="-1"
          >
            <div
              className="modal-dialog modal-dialog-centered"
              role="document"
            >
              <div
                className="modal-content"
              >
                <div
                  className="modal-header"
                >
                  <h5
                    className="modal-title"
                  >
                    You will transfer to a new Supervisor (& Team)
                  </h5>
                  <button
                    className="close"
                    onClick={[Function]}
                  >
                    ×
                  </button>
                </div>
                <div
                  className="modal-body"
                  style={
                    Object {
                      "marginBottom": "35px",
                    }
                  }
                >
                  Explicit information about the transfer to include the Person
    being transffered, from what Team and Super, to what team and Supervisor.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu
    porttitor ex. Nam luctus tincidunt dui, sit amet semper mi consequat eu.
                  <div
                    className="sc-fjdhpX dKuKyV"
                  />
                  <div
                    className="sc-jzJRlG kMeXzB"
                  >
                    <div
                      className="tcd-team-avatar sc-jTzLTM gcCHhZ"
                    >
                      <span>
                        TA
                      </span>
                    </div>
                    <div
                      className="name"
                    >
                      <h2>
                        Team: Global Affairs Advocacy
                      </h2>
                    </div>
                    <div
                      className="break"
                    >
                      <div>
                        <i
                          className="fas fa-trash-alt"
                        />
                      </div>
                    </div>
                    <img
                      alt="Avatar of  Clara MacKinnon"
                      src="2.jpg"
                    />
                    <div
                      className="name"
                    >
                      <h2>
                        Clara MacKinnon
                      </h2>
                      <span>
                        Job Title Here
                      </span>
                    </div>
                    <div
                      className="tcd-team-avatar sc-jTzLTM eUllqq"
                    >
                      <span>
                        TD
                      </span>
                    </div>
                    <div
                      className="name"
                    >
                      <h2>
                        Team: Default
                      </h2>
                    </div>
                  </div>
                </div>
                <div
                  className="modal-footer"
                >
                  <button
                    aria-label={null}
                    className="btn btn-primary"
                    onClick={[Function]}
                    type="button"
                  >
                    Custom Primary
                  </button>
                  <button
                    aria-label={null}
                    className="btn btn-secondary"
                    onClick={[Function]}
                    type="button"
                  >
                    Custom Secondary
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            className="modal-backdrop fade"
          />
        </div>
      </portal-dummy>
    </div>
  </div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h3
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            
            " Component
          </h3>
          <small>
            No propTypes defined!
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileProperties components/profile/team/TransferConfirmation isOpen=false 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          components/profile/team/TransferConfirmation
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          isOpen=false
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <div />
  </div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h3
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            
            " Component
          </h3>
          <small>
            No propTypes defined!
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileProperties components/profile/team/TransferConfirmation isOpen=true 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          components/profile/team/TransferConfirmation
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          isOpen=true
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <div>
      <portal-dummy>
        <div
          className=""
        >
          <div
            className="modal fade"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            role="dialog"
            style={
              Object {
                "display": "block",
              }
            }
            tabIndex="-1"
          >
            <div
              className="modal-dialog modal-dialog-centered"
              role="document"
            >
              <div
                className="modal-content"
              >
                <div
                  className="modal-header"
                >
                  <h5
                    className="modal-title"
                  >
                    You will transfer to a new Supervisor (& Team)
                  </h5>
                  <button
                    className="close"
                    onClick={[Function]}
                  >
                    ×
                  </button>
                </div>
                <div
                  className="modal-body"
                  style={
                    Object {
                      "marginBottom": "35px",
                    }
                  }
                >
                  Explicit information about the transfer to include the Person
    being transffered, from what Team and Super, to what team and Supervisor.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu
    porttitor ex. Nam luctus tincidunt dui, sit amet semper mi consequat eu.
                  <div
                    className="sc-fjdhpX dKuKyV"
                  />
                  <div
                    className="sc-jzJRlG fIktgz"
                  >
                    <img
                      alt="Avatar of  Mark Phillips"
                      src="1.jpg"
                    />
                    <div
                      className="team"
                    >
                      <div
                        className="sc-jTzLTM gcCHhZ"
                      >
                        <span>
                          TA
                        </span>
                      </div>
                    </div>
                    <div
                      className="name"
                    >
                      <h2>
                        Mark Phillips
                      </h2>
                      <span>
                        Team: Global Affairs Advocacy
                      </span>
                    </div>
                    <div
                      className="break"
                    >
                      <div />
                    </div>
                    <img
                      alt="Avatar of  Clara MacKinnon"
                      src="2.jpg"
                    />
                    <div
                      className="name"
                    >
                      <h2>
                        Clara MacKinnon
                      </h2>
                      <span>
                        Job Title Here
                      </span>
                    </div>
                    <img
                      alt="Avatar of  Mia Jarrel"
                      src="3.jpg"
                    />
                    <div
                      className="team"
                    >
                      <div
                        className="sc-jTzLTM eUllqq"
                      >
                        <span>
                          TD
                        </span>
                      </div>
                    </div>
                    <div
                      className="name"
                    >
                      <h2>
                        Mia Jarrel
                      </h2>
                      <span>
                        Team: Default
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="modal-footer"
                >
                  <button
                    aria-label={null}
                    className="btn btn-primary"
                    onClick={[Function]}
                    type="button"
                  >
                    Primary
                  </button>
                  <button
                    aria-label={null}
                    className="btn btn-secondary"
                    onClick={[Function]}
                    type="button"
                  >
                    Secondary
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            className="modal-backdrop fade"
          />
        </div>
      </portal-dummy>
    </div>
  </div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h3
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            
            " Component
          </h3>
          <small>
            No propTypes defined!
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileProperties components/profile/team/TransferConfirmation using teams instead of profiles 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          components/profile/team/TransferConfirmation
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          using teams instead of profiles
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <div>
      <portal-dummy>
        <div
          className=""
        >
          <div
            className="modal fade"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            role="dialog"
            style={
              Object {
                "display": "block",
              }
            }
            tabIndex="-1"
          >
            <div
              className="modal-dialog modal-dialog-centered"
              role="document"
            >
              <div
                className="modal-content"
              >
                <div
                  className="modal-header"
                >
                  <h5
                    className="modal-title"
                  >
                    You will transfer to a new Supervisor (& Team)
                  </h5>
                  <button
                    className="close"
                    onClick={[Function]}
                  >
                    ×
                  </button>
                </div>
                <div
                  className="modal-body"
                  style={
                    Object {
                      "marginBottom": "35px",
                    }
                  }
                >
                  Explicit information about the transfer to include the Person
    being transffered, from what Team and Super, to what team and Supervisor.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu
    porttitor ex. Nam luctus tincidunt dui, sit amet semper mi consequat eu.
                  <div
                    className="sc-fjdhpX dKuKyV"
                  />
                  <div
                    className="sc-jzJRlG fIktgz"
                  >
                    <div
                      className="tcd-team-avatar sc-jTzLTM gcCHhZ"
                    >
                      <span>
                        TA
                      </span>
                    </div>
                    <div
                      className="name"
                    >
                      <h2>
                        Team: Global Affairs Advocacy
                      </h2>
                    </div>
                    <div
                      className="break"
                    >
                      <div />
                    </div>
                    <img
                      alt="Avatar of  Clara MacKinnon"
                      src="2.jpg"
                    />
                    <div
                      className="name"
                    >
                      <h2>
                        Clara MacKinnon
                      </h2>
                      <span>
                        Job Title Here
                      </span>
                    </div>
                    <div
                      className="tcd-team-avatar sc-jTzLTM eUllqq"
                    >
                      <span>
                        TD
                      </span>
                    </div>
                    <div
                      className="name"
                    >
                      <h2>
                        Team: Default
                      </h2>
                    </div>
                  </div>
                </div>
                <div
                  className="modal-footer"
                >
                  <button
                    aria-label={null}
                    className="btn btn-primary"
                    onClick={[Function]}
                    type="button"
                  >
                    Custom Primary
                  </button>
                  <button
                    aria-label={null}
                    className="btn btn-secondary"
                    onClick={[Function]}
                    type="button"
                  >
                    Custom Secondary
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            className="modal-backdrop fade"
          />
        </div>
      </portal-dummy>
    </div>
  </div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h3
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            
            " Component
          </h3>
          <small>
            No propTypes defined!
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileProperties components/profile/team/TransferConfirmation with click handlers 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          components/profile/team/TransferConfirmation
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          with click handlers
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <div>
      <portal-dummy>
        <div
          className=""
        >
          <div
            className="modal fade"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            role="dialog"
            style={
              Object {
                "display": "block",
              }
            }
            tabIndex="-1"
          >
            <div
              className="modal-dialog modal-dialog-centered"
              role="document"
            >
              <div
                className="modal-content"
              >
                <div
                  className="modal-header"
                >
                  <h5
                    className="modal-title"
                  >
                    You will transfer to a new Supervisor (& Team)
                  </h5>
                  <button
                    className="close"
                    onClick={[Function]}
                  >
                    ×
                  </button>
                </div>
                <div
                  className="modal-body"
                  style={
                    Object {
                      "marginBottom": "35px",
                    }
                  }
                >
                  Explicit information about the transfer to include the Person
    being transffered, from what Team and Super, to what team and Supervisor.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu
    porttitor ex. Nam luctus tincidunt dui, sit amet semper mi consequat eu.
                  <div
                    className="sc-fjdhpX dKuKyV"
                  />
                  <div
                    className="sc-jzJRlG fIktgz"
                  >
                    <img
                      alt="Avatar of  Mark Phillips"
                      src="1.jpg"
                    />
                    <div
                      className="team"
                    >
                      <div
                        className="sc-jTzLTM gcCHhZ"
                      >
                        <span>
                          TA
                        </span>
                      </div>
                    </div>
                    <div
                      className="name"
                    >
                      <h2>
                        Mark Phillips
                      </h2>
                      <span>
                        Team: Global Affairs Advocacy
                      </span>
                    </div>
                    <div
                      className="break"
                    >
                      <div />
                    </div>
                    <img
                      alt="Avatar of  Clara MacKinnon"
                      src="2.jpg"
                    />
                    <div
                      className="name"
                    >
                      <h2>
                        Clara MacKinnon
                      </h2>
                      <span>
                        Job Title Here
                      </span>
                    </div>
                    <img
                      alt="Avatar of  Mia Jarrel"
                      src="3.jpg"
                    />
                    <div
                      className="team"
                    >
                      <div
                        className="sc-jTzLTM eUllqq"
                      >
                        <span>
                          TD
                        </span>
                      </div>
                    </div>
                    <div
                      className="name"
                    >
                      <h2>
                        Mia Jarrel
                      </h2>
                      <span>
                        Team: Default
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="modal-footer"
                >
                  <button
                    aria-label={null}
                    className="btn btn-primary"
                    onClick={[Function]}
                    type="button"
                  >
                    Primary
                  </button>
                  <button
                    aria-label={null}
                    className="btn btn-secondary"
                    onClick={[Function]}
                    type="button"
                  >
                    Secondary
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            className="modal-backdrop fade"
          />
        </div>
      </portal-dummy>
    </div>
  </div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h3
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            
            " Component
          </h3>
          <small>
            No propTypes defined!
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileProperties components/profile/team/TransferConfirmation with custom text 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          components/profile/team/TransferConfirmation
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          with custom text
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <div>
      <portal-dummy>
        <div
          className=""
        >
          <div
            className="modal fade"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            role="dialog"
            style={
              Object {
                "display": "block",
              }
            }
            tabIndex="-1"
          >
            <div
              className="modal-dialog modal-dialog-centered"
              role="document"
            >
              <div
                className="modal-content"
              >
                <div
                  className="modal-header"
                >
                  <h5
                    className="modal-title"
                  >
                    Custom title
                  </h5>
                  <button
                    className="close"
                    onClick={[Function]}
                  >
                    ×
                  </button>
                </div>
                <div
                  className="modal-body"
                  style={
                    Object {
                      "marginBottom": "35px",
                    }
                  }
                >
                  Custom dialog body
                  <div
                    className="sc-fjdhpX dKuKyV"
                  />
                  <div
                    className="sc-jzJRlG fIktgz"
                  >
                    <img
                      alt="Avatar of  Mark Phillips"
                      src="1.jpg"
                    />
                    <div
                      className="team"
                    >
                      <div
                        className="sc-jTzLTM gcCHhZ"
                      >
                        <span>
                          TA
                        </span>
                      </div>
                    </div>
                    <div
                      className="name"
                    >
                      <h2>
                        Mark Phillips
                      </h2>
                      <span>
                        Team: Global Affairs Advocacy
                      </span>
                    </div>
                    <div
                      className="break"
                    >
                      <div />
                    </div>
                    <img
                      alt="Avatar of  Clara MacKinnon"
                      src="2.jpg"
                    />
                    <div
                      className="name"
                    >
                      <h2>
                        Clara MacKinnon
                      </h2>
                      <span>
                        Job Title Here
                      </span>
                    </div>
                    <img
                      alt="Avatar of  Mia Jarrel"
                      src="3.jpg"
                    />
                    <div
                      className="team"
                    >
                      <div
                        className="sc-jTzLTM eUllqq"
                      >
                        <span>
                          TD
                        </span>
                      </div>
                    </div>
                    <div
                      className="name"
                    >
                      <h2>
                        Mia Jarrel
                      </h2>
                      <span>
                        Team: Default
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="modal-footer"
                >
                  <button
                    aria-label={null}
                    className="btn btn-primary"
                    onClick={[Function]}
                    type="button"
                  >
                    Custom Primary
                  </button>
                  <button
                    aria-label={null}
                    className="btn btn-secondary"
                    onClick={[Function]}
                    type="button"
                  >
                    Custom Secondary
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            className="modal-backdrop fade"
          />
        </div>
      </portal-dummy>
    </div>
  </div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h3
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            
            " Component
          </h3>
          <small>
            No propTypes defined!
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;
